# DeformationTransfer-Visualizer

./: .gitignore  CMakeLists.txt  ModelLoader.cpp  ModelLoader.h  README.md  Shader.cpp  Shader.h  build.sh  main.cpp
shaders/: fragment_shader.glsl  vertex_shader.glsl
